feat: 初始化项目，添加基本功能

--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "json-value-extractor",
-  "displayName": "JSON Value Extractor",
-  "description": "从 JSON 文件中提取指定字段的所有值并合并",
+  "displayName": "JSON 值提取器",
+  "description": "从 JSON 文件中提取指定字段的值并合并",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.60.0"
   },
   "categories": [
     "Other"
+  ],
+  "activationEvents": [
+    "onCommand:extension.extractJsonValues",
+    "onStartupFinished"
   ],
   "main": "./extension.js",
   "contributes": {
@@ -19,17 +23,11 @@
     ]
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "package": "vsce package",
-    "publish": "vsce publish"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["json", "extract", "merge", "vscode"],
+  "keywords": [],
   "author": "",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/InsaneLighter/json-value-extractor"
-  },
   "dependencies": {
     "@types/vscode": "^1.60.0"
   }
